syntax="proto3";
option java_multiple_files = true;
package networking.provider;

import "Address.proto";
import "User.proto";

message ProviderMessage{
  user.UserMessage user = 1;
  string company_name = 2;
  int32 cvr = 3;
  string phone_number = 4;
  string description = 5;
  bool is_approved = 6;
  address.AddressMessage address = 7;
}

service ProviderService{
  rpc CreateProvider(ProviderMessage) returns (ProviderMessage);
  rpc GetAllProviders(ProviderMessage) returns (ProviderMessage);
  rpc GetProviderById(ProviderMessage) returns (ProviderMessage);
  rpc EditProvider(ProviderMessage) returns (ProviderMessage);
  rpc RemoveProvider(ProviderMessage) returns (ProviderMessage);
  rpc GetAllNotApprovedProviders(ProviderMessage) returns (ProviderMessage);
}